--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,16 @@ name: Deploy to Production
 on:
   push:
     branches:
-      - main  # Change to your default branch if different
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Deploy to Server
+      - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -23,25 +22,16 @@ jobs:
           script: |
             cd /home/ubuntu/ecom/yellow_banyan
 
-            # Pull latest code
             git pull origin main
 
-            # Activate virtual environment
-            source venv/bin/activate
+            source ../venv/bin/activate
 
-            # Install dependencies (if requirements changed)
             pip install -r requirements.txt
 
-            # Run migrations (if any)
             python manage.py migrate --noinput
-
-            # Collect static files
             python manage.py collectstatic --noinput
 
-            # Restart Gunicorn
             sudo systemctl restart gunicorn
-
-            # Reload Nginx (optional, for config changes)
             sudo systemctl reload nginx
 
-            echo "Deployment completed successfully!"
+            echo "Deployment successful"
