--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,18 +20,101 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
+            set -e  # Exit on any error
+
+            echo "=========================================="
+            echo "STAGE 1: Navigate to project directory"
+            echo "=========================================="
             cd /home/ubuntu/ecom/yellow_banyan
+            echo "Current directory: $(pwd)"
 
-            git pull origin main
+            echo ""
+            echo "=========================================="
+            echo "STAGE 2: Pull latest code from GitHub"
+            echo "=========================================="
+            git fetch origin main
+            git reset --hard origin/main
+            echo "Git pull completed"
+            echo "Latest commit: $(git log -1 --oneline)"
 
+            echo ""
+            echo "=========================================="
+            echo "STAGE 3: Activate virtual environment"
+            echo "=========================================="
             source ../venv/bin/activate
+            echo "Python version: $(python --version)"
+            echo "Pip version: $(pip --version)"
 
-            pip install -r requirements.txt
+            echo ""
+            echo "=========================================="
+            echo "STAGE 4: Install dependencies"
+            echo "=========================================="
+            pip install -r requirements.txt --quiet
+            echo "Dependencies installed"
 
+            echo ""
+            echo "=========================================="
+            echo "STAGE 5: Run database migrations"
+            echo "=========================================="
             python manage.py migrate --noinput
+            echo "Migrations completed"
+
+            echo ""
+            echo "=========================================="
+            echo "STAGE 6: Collect static files"
+            echo "=========================================="
             python manage.py collectstatic --noinput
+            echo "Static files collected"
 
+            echo ""
+            echo "=========================================="
+            echo "STAGE 7: Restart Gunicorn service"
+            echo "=========================================="
             sudo systemctl restart gunicorn
-            sudo systemctl reload nginx
+            sleep 3  # Wait for service to start
 
-            echo "Deployment successful"
+            echo ""
+            echo "=========================================="
+            echo "STAGE 8: Check Gunicorn status"
+            echo "=========================================="
+            if sudo systemctl is-active --quiet gunicorn; then
+              echo "Gunicorn is RUNNING"
+              sudo systemctl status gunicorn --no-pager
+            else
+              echo "ERROR: Gunicorn FAILED to start!"
+              sudo journalctl -u gunicorn --since "2 minutes ago" --no-pager
+              exit 1
+            fi
+
+            echo ""
+            echo "=========================================="
+            echo "STAGE 9: Reload Nginx"
+            echo "=========================================="
+            sudo systemctl reload nginx
+            if sudo systemctl is-active --quiet nginx; then
+              echo "Nginx is RUNNING"
+            else
+              echo "ERROR: Nginx is not running!"
+              exit 1
+            fi
+
+            echo ""
+            echo "=========================================="
+            echo "STAGE 10: Health check"
+            echo "=========================================="
+            sleep 2
+            HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://127.0.0.1:8000/ || echo "000")
+            echo "HTTP Status Code: $HTTP_STATUS"
+
+            if [ "$HTTP_STATUS" = "200" ] || [ "$HTTP_STATUS" = "302" ]; then
+              echo "Health check PASSED"
+            else
+              echo "WARNING: Health check returned $HTTP_STATUS (might be normal if login required)"
+            fi
+
+            echo ""
+            echo "=========================================="
+            echo "DEPLOYMENT COMPLETED SUCCESSFULLY"
+            echo "=========================================="
+            echo "Deployed at: $(date)"
+            echo "Commit: $(git log -1 --oneline)"
